@@ -1,3 +1,7 @@
+## Rails 3.0.16 doxo
+
+* Fix XML serialization of methods that return nil to not be considered as YAML (GH #8853 and GH #492)
+
 ## Rails 3.0.16 (Jul 26, 2012)
 
 *   No changes.
